<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tetrarch</string>
    <string name="choose_name">Choose your name</string>
    <string name="your_name">Your name</string>
    <string name="validate">Validate</string>
    <string name="choose_adress">Choose your server</string>
    <string name="adress">Adress</string>
    <string name="connect">Connect</string>
    <string name="play">Connect to a game</string>
    <string name="create_game">Host a game</string>
    <string name="options">Options</string>


</resources>
